# receipt2tx

./: .gitignore  README.md  pyproject.toml
features/: environment.py  image_conversion.feature  state_tracking.feature
features/steps/: config_steps.py  environment_steps.py  file_steps.py  logging_steps.py  pipeline_steps.py  tracking_steps.py
src/receipt2tx/: __init__.py  cli.py
src/receipt2tx/image_fetch/: __init__.py  backends.py  uri.py
src/receipt2tx/image_fetch/backends/: __init__.py  abstract.py  backend_local.py  factory.py
src/receipt2tx/image_fetch/backends/tests/: test_backend_local.py  test_backends.py  test_factory.py
src/receipt2tx/image_fetch/tests/: test_backends.py  test_uri.py
