[project]
name = "receipt2tx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Durieux", email = "durieux.charles01@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.19.2",
]

[project.scripts]
receipt2tx = "receipt2tx.cli:app"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
