[project]
name = "receipt2tx"
version = "0.2.0"
description = "Convert receipts to transactions"
readme = "README.md"
authors = [{ name = "Charles Durieux", email = "durieux.charles01@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["typer>=0.19.2"]

[project.scripts]
receipt2tx = "receipt2tx.cli:app"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
]
